--- a/client/src/index.css
+++ b/client/src/index.css
@@ -158,14 +158,14 @@
   flex-direction: column;
 }
 
-.chat .username {
+.chat .details {
   width: 100%;
   height: 5%;
   color: #fff;
   font-size: 25px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .chat .messages {
@@ -256,6 +256,11 @@
   border: none;
   outline: none;
   border-radius: 10px;
+}
+
+.empty {
+  width: 65%;
+  height: 100%;
 }
 
 .changeForgotResetPassword {
