--- a/client/src/index.css
+++ b/client/src/index.css
@@ -116,6 +116,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
@@ -256,6 +257,91 @@
   border: none;
   outline: none;
   border-radius: 10px;
+}
+
+.createGroup {
+  width: 65%;
+  height: 100%;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.createGroup .input {
+  height: 8%;
+}
+
+.createGroup .input input {
+  height: 40px;
+  width: 300px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-size: 20px;
+  padding: 0 10px 0 10px;
+}
+
+.createGroup .container {
+  width: 100%;
+  height: 84%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.createGroup .container .subContainer {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+}
+
+.createGroup .container .subContainer input {
+  height: 30px;
+  width: 300px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-size: 20px;
+  padding: 0 10px 0 10px;
+  margin-bottom: 20px;
+}
+
+.addUser {
+  display: flex;
+  gap: 20px;
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.green {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: green;
+}
+
+.red {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
+}
+
+.addUser button {
+  width: 50px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+}
+
+.createGroup .container .create {
+  height: 8%;
 }
 
 .empty {
