--- a/client/src/index.css
+++ b/client/src/index.css
@@ -169,7 +169,7 @@
   justify-content: space-evenly;
 }
 
-.chat .messages {
+.messages {
   width: 100%;
   height: 85%;
   display: flex;
@@ -181,13 +181,13 @@
   margin-bottom: 30px;
 }
 
-.chat .messages .message {
+.messages .message {
   width: 100%;
   color: white;
   padding: 0 10px 0 10px;
 }
 
-.chat .messages .messageSent {
+.messages .messageSent {
   max-width: 60%;
   float: right;
   width: fit-content;
@@ -196,11 +196,11 @@
   border-radius: 10px;
 }
 
-.chat .message .messageSent p {
+.message .messageSent p {
   width: fit-content;
 }
 
-.chat .messages .messageReceived {
+.messages .messageReceived {
   max-width: 60%;
   width: fit-content;
   background-color: grey;
@@ -208,7 +208,7 @@
   border-radius: 10px;
 }
 
-.chat .message .messageReceived p {
+.message .messageReceived p {
   width: fit-content;
 }
 
@@ -342,6 +342,67 @@
 
 .createGroup .container .create {
   height: 8%;
+}
+
+.chatGroup {
+  width: 65%;
+  height: 100%;
+  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+}
+
+.settings {
+  width: 100%;
+  height: 5%;
+  border-bottom: 1px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.messagesGroup {
+  width: 100%;
+  height: 85%;
+  border-bottom: 1px solid white;
+}
+
+.usernameMessage {
+  color: white;
+}
+
+.sendGroup {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.sendGroup input {
+  width: 500px;
+  height: 40px;
+  border: none;
+  outline: none;
+  border-radius: 20px;
+  padding: 0 10px 0 10px;
+  font-size: 20px;
+}
+
+.sendGroup button {
+  width: 100px;
+  height: 40px;
+  border: none;
+  outline: none;
+  border: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 10px;
 }
 
 .empty {
